# radish

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  RELEASING.md  pyproject.toml
.github/: markdown-link-check-config.json
.github/workflows/: benchmark.yml  docs.yml  python-ci.yml  release.yml  rust-ci.yml
docs/: CHANGELOG.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  RELEASING.md
plans/: 0001-nexrad-level2-backend.md  0002-nexrad-msg2-msg5-attrs.md
python/: Cargo.toml  build.rs  pyproject.toml
python/examples/: bench_nexrad_vs_xradar.py  bench_sigmet_vs_xradar.py  read_chunks.ipynb  smoke_test_nexrad.ipynb  smoke_test_sigmet.ipynb
python/radish/: __init__.py  _open.py
python/radish/backends/: xarray_backend.py
python/src/: lib.rs
python/tests/: conftest.py  test_nexrad.py  test_nexrad_demux.py  test_sigmet.py  test_xradar_parity.py
radish/: Cargo.toml
radish/benches/: nexrad.rs  sigmet.rs
radish/examples/: sigmet_smoke.rs  test_netcdf_open.rs  time_decode.rs
radish/src/: error.rs  lib.rs
radish/src/backends/: cfradial1.rs  mod.rs
radish/src/backends/cfradial1/: helpers.rs  mod.rs  sniff.rs
radish/src/backends/common/: buffer.rs  coords.rs  geometry.rs  metadata.rs  mod.rs  sniff.rs  sort.rs
radish/src/backends/nexrad/: adapter.rs  attrs.rs  demux.rs  mapping.rs  mod.rs  sniff.rs
radish/src/backends/nexrad/decode/: error.rs  header.rs  integration_test.rs  mod.rs  model.rs  products.rs  reader.rs  record.rs  volume.rs
radish/src/backends/nexrad/decode/messages/: mod.rs  msg1.rs  msg2.rs  msg5.rs
radish/src/backends/nexrad/decode/messages/msg31/: cfp.rs  header.rs  info_blocks.rs  mod.rs  moment.rs
radish/src/backends/sigmet/: adapter.rs  calibration.rs  decode.rs  mapping.rs  mod.rs  sniff.rs  structs.rs
radish/src/model/: coordinates.rs  mod.rs  moment.rs  nexrad_attrs.rs  sigmet_attrs.rs  sweep.rs  volume.rs
radish/src/transforms/: georeference.rs  mod.rs
radish/tests/: test_decode_phase_breakdown.rs  test_decode_speed_comparison.rs  test_nexrad.rs  test_nexrad_demux.rs  test_nexrad_internal_parity.rs  test_sigmet.rs
radish/tests/fixtures/: CORPUS.md
scripts/: bump-version.sh
types/src/: lib.rs
