[workspace]
members = [
    "radish",
    "python",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Maxwell Grover <maxwell.grover@anl.gov>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgrover1/radish"

[workspace.dependencies]
# Core dependencies
radish = { path = "radish" }
radish-types = { path = "types" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
ndarray = "0.16"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File I/O. We use the maintained `hdf5-metno` fork because the original `hdf5`
# crate is stuck at 0.8 and does not recognise HDF5 ≥ 1.14 (Ubuntu 25.04 ships
# 1.14.5). `netcdf` 0.12 internally pulls a compatible `hdf5-sys`.
hdf5 = { package = "hdf5-metno", version = "0.12" }
netcdf = "0.12"

# NEXRAD Level 2 backend
# `parallel` enables rayon-based LDM decompression inside nexrad-data — the
# single feature that gives a ~7× decode-time win on multi-LDM-chunk files.
# We deliberately stay off the `default = ["full"]` set so we don't pull in
# `image` (render), `reqwest`+`tokio` (aws), and friends.
nexrad = { version = "1.0.0-rc.4", default-features = false, features = ["model", "decode", "data", "chrono", "parallel"] }
nexrad-model = { version = "1.0.0-rc.2", features = ["chrono"] }

# Sigmet/IRIS RAW backend (Vaisala SIGMET binary, Vaisala ICD 2620002AA).
# No upstream Rust crate exists; we port struct definitions from xradar's
# `iris.py`. `byteorder` for explicit little-endian primitive reads,
# `bytemuck` for `#[repr(C, packed)]` zero-copy casts on the on-wire structs.
byteorder = "1.5"
bytemuck = { version = "1.20", features = ["derive"] }

# Parallel sweep adaptation in radish::backends::{nexrad,sigmet}::adapter.
# Already in the dep tree transitively via nexrad-data/parallel; declared
# explicitly so the import is grep-able and the version is pinned.
rayon = "1.10"

# Python bindings.
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
