[workspace]
members = [
    "radish",
    "python",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"
authors = ["Maxwell Grover <maxwell.grover@anl.gov>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgrover1/radish"

[workspace.dependencies]
# Core dependencies
radish = { path = "radish" }
radish-types = { path = "types" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
ndarray = "0.16"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File I/O. We use the maintained `hdf5-metno` fork because the original `hdf5`
# crate is stuck at 0.8 and does not recognise HDF5 ≥ 1.14 (Ubuntu 25.04 ships
# 1.14.5). `netcdf` 0.12 internally pulls a compatible `hdf5-sys`.
hdf5 = { package = "hdf5-metno", version = "0.12" }
netcdf = "0.12"

# NEXRAD Level 2 backend — `nexrad` and `nexrad-model` are dev-only
# now (see `radish/Cargo.toml` `[dev-dependencies]`); the runtime
# decoder lives at `radish::backends::nexrad::decode` and pulls
# only `bzip2` + `rayon` declared below.

# Sigmet/IRIS RAW backend (Vaisala SIGMET binary, Vaisala ICD 2620002AA).
# No upstream Rust crate exists; we port struct definitions from xradar's
# `iris.py`. `byteorder` for explicit little-endian primitive reads,
# `bytemuck` for `#[repr(C, packed)]` zero-copy casts on the on-wire structs.
byteorder = "1.5"
bytemuck = { version = "1.20", features = ["derive"] }

# Parallel sweep adaptation in radish::backends::{nexrad,sigmet}::adapter
# and parallel LDM decompression in `nexrad::decode::record::decompress_all`.
rayon = "1.10"

# bzip2 decompression for NEXRAD Level 2 LDM records, used by the
# in-tree decoder at `radish::backends::nexrad::decode`.
bzip2 = "0.6"

# Dev-only: `nexrad` (1.0.0-rc.4 with `parallel` for the rayon-based
# LDM decode) is the side-by-side parity reference for
# `radish/tests/test_nexrad_internal_parity.rs`. We deliberately
# stay off the `default = ["full"]` set so test builds don't pull
# `image` (render), `reqwest`+`tokio` (aws), and friends.
nexrad = { version = "1.0.0-rc.4", default-features = false, features = ["model", "decode", "data", "chrono", "parallel"] }

# Python bindings.
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
