[package]
name = "radish"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
radish-types = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hdf5 = { workspace = true }
netcdf = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true }
bzip2 = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
# Property-based tests in `backends::common::buffer` for the
# `decode_into_array` invariant matrix (random nrays/ngates/max_gates →
# never panic, untouched cells always NaN, output shape always
# `(nrays × max_gates)`). std-feature only; we don't need `regex`.
proptest = { version = "1.5", default-features = false, features = ["std"] }
# SHA-256 verification of NEXRAD test-fixture corpus. See
# `radish/tests/fixtures/CORPUS.md` for the canonical sums.
sha2 = "0.10"
# Parameterized tests for the message-iteration loop's boundary-resync
# state space (under-read / exact / over-read / past-buffer).
rstest = "0.21"
# Side-by-side parity reference for `tests/test_nexrad_internal_parity.rs`.
# Not a runtime dep; the production decode path is fully in-tree.
nexrad = { workspace = true }

[[bench]]
name = "nexrad"
harness = false

[[bench]]
name = "sigmet"
harness = false
